# anti-money-laundering

./: .env.example  .gitignore  LICENSE  README.md  REPORT.md  TODO.txt  clear_jupyter_notebook.py  create_venv.sh  decision_tree.ipynb  mytest.py  pyproject.toml  random_forest.ipynb  test.ipynb  test.py  tree-custom.dot  tree-id3.dot  tree.dot
.kaggle/: kaggle.json
dot_figs/: tree-c45-diabetes.dot  tree-c45-oversampling.dot  tree-c45-undersampling.dot  tree-c45-wo_preprocessing.dot  tree-custom-diabetes.dot  tree-custom-oversampling-2-100.dot  tree-custom-oversampling-2-2.dot  tree-custom-oversampling-4-100.dot  tree-custom-oversampling-4-2.dot  tree-custom-oversampling-6-100.dot  tree-custom-oversampling-6-2.dot  tree-custom-undersampling-2-100.dot  tree-custom-undersampling-2-1000.dot  tree-custom-undersampling-2-10000.dot  tree-custom-undersampling-2-2.dot  tree-custom-undersampling-4-100.dot  tree-custom-undersampling-4-1000.dot  tree-custom-undersampling-4-10000.dot  tree-custom-undersampling-4-2.dot  tree-custom-undersampling-6-100.dot  tree-custom-undersampling-6-1000.dot  tree-custom-undersampling-6-10000.dot  tree-custom-undersampling-6-2.dot  tree-custom.dot  tree-id3-diabetes.dot  tree-id3-oversampling-2.dot  tree-id3-oversampling-4.dot  tree-id3-oversampling-6.dot  tree-id3-undersampling-2.dot  tree-id3-undersampling-4.dot  tree-id3-undersampling-6.dot  tree-id3-wo_preprocessing-2.dot  tree-id3-wo_preprocessing-4.dot  tree-id3-wo_preprocessing-6.dot  tree-id3.dot
src/: __init__.py  kaggle_config.py  main.py  main_decision_tree.py  main_random_forest.py
(+21 files in other folders)
